Aplicação de correções para o eslint.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "copy-files": "copyfiles -u 1 src/**/*.json dist/ && npm run copy-file-gql",
     "copy-file-gql": "copyfiles schema.gql dist/",
     "tsc-paths": "tscpaths -p tsconfig.json -s ./src -o ./dist",
-    "build": "npm run clean && tsc --project tsconfig.json && npm run copy-files && npm run tsc-paths && npm run clean-tests",
+    "build": "npm run clean-dist && tsc --project tsconfig.json && npm run copy-files && npm run tsc-paths && npm run clean-tests",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/main/startup.ts",
     "start": "node dist/main/startup.js && npm run copy-file-gql",
     "test": "jest"
@@ -38,10 +38,14 @@
     "@typescript-eslint/parser": "^4.22.0",
     "copyfiles": "^2.4.1",
     "eslint": "^7.25.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.23.2",
     "jest": "^26.6.3",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.5",
