--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "homepage": "https://github.com/macgyver1985/eng-zap-challenge-typescript#readme",
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.1",
     "@types/node-fetch": "^2.5.10",
@@ -57,9 +59,13 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "apollo-server-express": "^2.24.0",
+    "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "inversify": "^5.1.1",
     "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
     "uuid": "^8.3.2"
   }
 }
