--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.24.0",
+    "class-validator": "^0.13.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "inversify": "^5.1.1",
