--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.11",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.0.1",
     "@types/node-fetch": "^2.5.10",
     "@types/uuid": "^8.3.0",
@@ -65,6 +66,7 @@
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "inversify": "^5.1.1",
+    "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
