--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/macgyver1985/eng-zap-challenge-typescript#readme",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.23",
@@ -62,6 +63,7 @@
   "dependencies": {
     "apollo-server-express": "^2.24.0",
     "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
