Inclusão dos arquivos de configuração por ambiente.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
       "@layer/crossCutting/*": [
         "./src/crossCutting.layer/*"
       ],
+      "@layer/settings/*": [
+        "./src/settings.layer/*"
+      ],
       "@layer/domain/*": [
         "./src/domain.layer/*"
       ],
