--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eng-zap-challenge-typescript",
+  "name": "back-end-with-clean-architecture-and-typescript",
   "version": "1.0.0",
-  "description": "Backend para gestão dos imóveis do grupo ZAP e Viva Real",
+  "description": "Backend para gestão dos imóveis do grupo Imóveis .COM e Pronto pra Morar",
   "main": "src/main/startup.ts",
   "scripts": {
     "clean-dist": "rimraf dist/",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/macgyver1985/eng-zap-challenge-typescript.git"
+    "url": "git+https://github.com/macgyver1985/back-end-with-clean-architecture-and-typescript.git"
   },
   "keywords": [
     "Clean Architecture",
@@ -31,9 +31,9 @@
   "author": "Felipe França",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/macgyver1985/eng-zap-challenge-typescript/issues"
+    "url": "https://github.com/macgyver1985/back-end-with-clean-architecture-and-typescript/issues"
   },
-  "homepage": "https://github.com/macgyver1985/eng-zap-challenge-typescript#readme",
+  "homepage": "https://github.com/macgyver1985/back-end-with-clean-architecture-and-typescript#readme",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
