--- a/src/settings.layer/appSettings.production.json
+++ b/src/settings.layer/appSettings.production.json
@@ -2,7 +2,7 @@
     "adapters": {
         "services": {
             "obtainRealEstate": {
-                "endpoint": "http://grupozap-code-challenge.s3-website-us-east-1.amazonaws.com/sources/source-2.json"
+                "endpoint": "https://github.com/macgyver1985/back-end-with-clean-architecture-and-typescript/blob/master/resource/source.json"
             }
         }
     },
