--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/main.layer/startup.ts",
     "start": "node dist/main.layer/startup.js && npm run copy-file-gql",
     "test": "jest --no-cache --detectOpenHandles",
-    "docker-build": "npm run build && docker build -f Dockerfile -t macgyver1985/engzap .",
-    "docker-start": "docker run --name macgyver_application -d -e NODE_ENV=production -p 3333:3333 macgyver1985/engzap",
+    "docker-build": "npm run build && docker build -f Dockerfile -t macgyver1985/imoveis .",
+    "docker-start": "docker run --name macgyver_application -d -e NODE_ENV=production -p 3333:3333 macgyver1985/imoveis",
     "publish": "npm run docker-build && npm run docker-start"
   },
   "repository": {
@@ -24,9 +24,7 @@
   "keywords": [
     "Clean Architecture",
     "TypeScript",
-    "NodeJS",
-    "ZAP",
-    "Viva Real"
+    "NodeJS"
   ],
   "author": "Felipe França",
   "license": "ISC",
