--- a/src/settings.layer/appSettings.develop.json
+++ b/src/settings.layer/appSettings.develop.json
@@ -2,7 +2,7 @@
     "adapters": {
         "services": {
             "obtainRealEstate": {
-                "endpoint": "https://github.com/macgyver1985/back-end-with-clean-architecture-and-typescript/blob/master/resource/source.json"
+                "endpoint": "https://sharedby.blomp.com/qAqEbW"
             }
         }
     },
